fixed issue with openapigenerator not generating models
